buildscript {
    repositories {
        mavenCentral()
        mavenLocal()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springbootVersion}")
    }
}

plugins {
    id 'com.palantir.docker' version "${palantirDocker}"
    id "com.github.jk1.dependency-license-report" version "${dependencyLicenseReport}"
    id "com.github.hierynomus.license" version "${hierynomusLicense}"
    id "org.sonarqube" version "${sonarqube}"
    id 'net.researchgate.release' version "${gradleRelease}"
}

release {
    failOnCommitNeeded = false
    failOnUpdateNeeded = false
    failOnSnapshotDependencies = false
}


allprojects {
    // TODO remove
    apply plugin: 'maven-publish'
    apply plugin: "com.github.hierynomus.license"
    apply plugin: 'eclipse'
    apply plugin: 'idea'
    group = 'com.demandware.carbonj'

    license {
        header rootProject.file('LICENSE-HEADER-JAVA')
        exclude "**/banner.txt"
    //    include "**/*.conf"
    }
}


subprojects {
    apply plugin: 'java'

    sourceCompatibility = 17
    targetCompatibility = 17
    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }

    configurations.all {
    }

    dependencies {
        implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: "${jackson}"
        implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: "${jackson}"
        implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: "${jackson}"
        implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-smile', version: "${jackson}"
        implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-cbor', version: "${jackson}"
        implementation group: 'com.google.re2j', name: 're2j', version: "${re2j}"
        testImplementation group: 'org.powermock', name: 'powermock-module-javaagent', version: "${powermock}"
        testImplementation group: 'org.jacoco', name: 'org.jacoco.agent', version: "${jacoco}", classifier: 'runtime'
        testImplementation group: 'org.powermock', name: 'powermock-core', version: "${powermock}"
        testImplementation("org.junit.jupiter:junit-jupiter:${junit}")
    }
}
